--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=GOS-VDI209\\TFTIC;Initial Catalog=DemoClnArchi;Integrated Security=True;Connect Timeout=60;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": ""
   }
 }
